--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Bootstrap 101 Template</title>
+    <title>Progeny MMXIV</title>
 
     <!-- Bootstrap - Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -22,12 +22,64 @@
     <![endif]-->
 
     <!-- Your stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-md-6">
+            <header>
+                <h1>Progeny MMXIV</h1>
+                <ul>
+                    <li>home</li>
+                    <li>about</li>
+                    <li>music</li>
+                    <li>gigs</li>
+                    <li>photos</li>
+                    <li>videos</li>
+                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                </ul>
+            </header>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <section>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-4">
+                                <article class="">
+                                    <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
+                                    <h2>Blog</h2>
+                                    <h3>Nowell wordpress audiotheme featres overview</h3>
+                                </article>
+                            </div>
+                            <div class="col-xs-12 col-md-4">
+                                <article class="">
+                                    <img src="./images/rodney-hayden-atascosa-sand.jpg" alt="Image2">
+                                    <h2>Records</h2>
+                                    <h3>atascosa sand</h3>
+                                </article>
+                            </div>
+                            <div class="col-xs-12 col-md-4">
+                                <article class="">
+                                    <img src="./images/322267385_640.jpg" alt="Image3">
+                                    <h2>video</h2>
+                                    <h3>drew kennedy - angel band</h3>
+                                </article>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+                <div class="">
+                    <main>
 
-<h1>Bootstrap CDN template</h1>
+                    </main>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
