--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
     <title>Progeny MMXIV</title>
 
+    <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap - Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -27,7 +27,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-md-6">
+            <div class="col-xs-12 col-md-2">
             <header>
                 <h1>Progeny MMXIV</h1>
                 <ul>
@@ -42,15 +42,15 @@
                 </ul>
             </header>
             </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6">
+            <!-- <div class="row"> -->
+                <div class="col-xs-12 col-md-10">
                     <section>
                         <div class="row">
                             <div class="col-xs-12 col-md-4">
                                 <article class="">
                                     <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
-                                    <h2>Blog</h2>
-                                    <h3>Nowell wordpress audiotheme featres overview</h3>
+                                        <h2>Blog</h2>
+                                        <h3>Nowell wordpress audiotheme featres overview</h3>
                                 </article>
                             </div>
                             <div class="col-xs-12 col-md-4">
