--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-12 col-md-2">
+            <div class="col-xs-12 col-sm-12 col-md-2">
             <header>
                 <h1>Progeny MMXIV</h1>
                 <ul>
@@ -42,25 +42,24 @@
                 </ul>
             </header>
             </div>
-            <!-- <div class="row"> -->
-                <div class="col-xs-12 col-md-10">
+                <div class="col-xs-12 col-sm-12 col-md-10">
                     <section>
                         <div class="row">
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="">
                                     <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
                                         <h2>Blog</h2>
                                         <h3>Nowell wordpress audiotheme featres overview</h3>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="">
-                                    <img src="./images/rodney-hayden-atascosa-sand.jpg" alt="Image2">
+                                    <img src="./images/rodney-hayden-atascosa-sand2.jpg" alt="Image2">
                                     <h2>Records</h2>
                                     <h3>atascosa sand</h3>
                                 </article>
                             </div>
-                            <div class="col-xs-12 col-md-4">
+                            <div class="col-xs-12 col-sm-6 col-md-4">
                                 <article class="">
                                     <img src="./images/322267385_640.jpg" alt="Image3">
                                     <h2>video</h2>
@@ -70,11 +69,19 @@
                         </div>
                     </section>
                 </div>
-                <div class="">
-                    <main>
-
-                    </main>
-
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-2">
+                        <main>
+                            <h2>audiotheme framework demo</h2>
+                            <p>The Audio Theme Framework plugin is built to work with any WordPress theme Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        </main>
+                        <aside class="">
+                            <h3>upcoming gigs</h3>
+                            <ul>
+                                <li>Telluside Bluegrass Festival
+                                Telluride, CO, United States June 21,2015</li>
+                            </ul>
+                        </aside>
                 </div>
             </div>
         </div>
