--- a/index.html
+++ b/index.html
@@ -28,63 +28,95 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-2">
-            <header>
-                <h1>Progeny MMXIV</h1>
-                <ul>
-                    <li>home</li>
-                    <li>about</li>
-                    <li>music</li>
-                    <li>gigs</li>
-                    <li>photos</li>
-                    <li>videos</li>
-                    <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                    <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-                </ul>
-            </header>
+                <header>
+                    <h1>Progeny MMXIV</h1>
+                    <ul>
+                        <li>home</li>
+                        <li>about</li>
+                        <li>music</li>
+                        <li>gigs</li>
+                        <li>photos</li>
+                        <li>videos</li>
+                        <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                        <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+                    </ul>
+                </header>
             </div>
-                <div class="col-xs-12 col-sm-12 col-md-10">
-                    <section>
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
-                                        <h2>Blog</h2>
-                                        <h3>Nowell wordpress audiotheme featres overview</h3>
-                                </article>
-                            </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="./images/rodney-hayden-atascosa-sand2.jpg" alt="Image2">
-                                    <h2>Records</h2>
-                                    <h3>atascosa sand</h3>
-                                </article>
-                            </div>
-                            <div class="col-xs-12 col-sm-6 col-md-4">
-                                <article class="">
-                                    <img src="./images/322267385_640.jpg" alt="Image3">
-                                    <h2>video</h2>
-                                    <h3>drew kennedy - angel band</h3>
-                                </article>
-                            </div>
+            <div class="col-xs-12 col-sm-12 col-md-10">
+                <section>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
+                                    <h2>Blog</h2>
+                                    <h3>Nowell wordpress audiotheme featres overview</h3>
+                            </article>
                         </div>
-                    </section>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-2">
-                        <main>
-                            <h2>audiotheme framework demo</h2>
-                            <p>The Audio Theme Framework plugin is built to work with any WordPress theme Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        </main>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img src="./images/rodney-hayden-atascosa-sand2.jpg" alt="Image2">
+                                <h2>Records</h2>
+                                <h3>atascosa sand</h3>
+                            </article>
+                        </div>
+                        <div class="col-xs-12 col-sm-6 col-md-4">
+                            <article class="">
+                                <img src="./images/322267385_640.jpg" alt="Image3">
+                                <h2>video</h2>
+                                <h3>drew kennedy - angel band</h3>
+                            </article>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="row">
+                <main>
+                    <div class="col-xs-12 col-sm-8 col-md-6">
+                        <h2>audiotheme framework demo</h2>
+                        <p>The Audio Theme Framework plugin is built to work with any WordPress theme Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
                         <aside class="">
                             <h3>upcoming gigs</h3>
                             <ul>
-                                <li>Telluside Bluegrass Festival
-                                Telluride, CO, United States June 21,2015</li>
+                                <li><a href="#">Telluside Bluegrass Festival</a>
+                                <span>Telluride, CO, United States</span> June 21,2015</li>
+                                <li><a href="#">Miller Auditorium</a>
+                                <span>Kalamazoo, MI, United States</span> October 11,2015</li>
                             </ul>
+                            <h3>Featured video</h3>
+                            <img src="./images/audiotheme-overview-video-thumbnail.jpg" alt="audiotheme">
+                            <p>Overview showcasing a few of the features avaibles un the <span>AudioTheme Framework</span> via the WordPress admin.</p>
                         </aside>
-                </div>
+                    </div>
+                </main>
+                <aside>
+                    <ul>
+                        <li>credits</li>
+                        <li>blog/news</li>
+                        <li>style guide</li>
+                        <li>contact</li>
+                        <li>try audiotheme!</li>
+                        <li>github</li>
+                        <li>wordpress</li>
+                    </ul>
+                    <input type="text" name="" value="Search...">
+                    <h3>recent release</h3>
+                    <img src="./images/wide-listener-1024x1024.jpg" alt="Radar">
+                    <p><span>Released 9.10.13</span><br>
+                    Liste Now</p>
+                    <h3>special thanks</h3>
+                    <ul>
+                        <li>Drew Kennedy</li>
+                        <li>Rodney Hayden</li>
+                        <li>Modern Trade</li>
+                    </ul>
+                    <p>Twenty Fourteen WordPress Child Theme by <em>AudioTheme</em>.</p>
+                </aside>
             </div>
         </div>
+        <footer>Progeny MMXIV WordPress theme by Cedaro. Proudly powered bu WordPress
+        </footer>
     </div>
 
 
