--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 </header>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-10">
-                <section>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6 col-md-4">
+                        <section>
                             <article class="">
                                 <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
                                     <h2>Blog</h2>
@@ -70,26 +70,28 @@
                 </section>
             </div>
             <div class="row">
-                <main>
-                    <div class="col-xs-12 col-sm-8 col-md-6">
+                <div class="col-xs-12 col-sm-8 col-md-6">
+                    <main>
                         <h2>audiotheme framework demo</h2>
                         <p>The Audio Theme Framework plugin is built to work with any WordPress theme Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    </div>
-                    <div class="col-xs-12 col-sm-4 col-md-4">
-                        <aside class="">
-                            <h3>upcoming gigs</h3>
-                            <ul>
-                                <li><a href="#">Telluside Bluegrass Festival</a>
-                                <span>Telluride, CO, United States</span> June 21,2015</li>
-                                <li><a href="#">Miller Auditorium</a>
-                                <span>Kalamazoo, MI, United States</span> October 11,2015</li>
-                            </ul>
-                            <h3>Featured video</h3>
-                            <img src="./images/audiotheme-overview-video-thumbnail.jpg" alt="audiotheme">
-                            <p>Overview showcasing a few of the features avaibles un the <span>AudioTheme Framework</span> via the WordPress admin.</p>
-                        </aside>
-                    </div>
-                </main>
+                    </main>
+                </div>
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <aside class="">
+                        <h3>upcoming gigs</h3>
+                        <ul>
+                            <li><a href="#">Telluside Bluegrass Festival</a>
+                            <span>Telluride, CO, United States</span> June 21,2015</li>
+                            <li><a href="#">Miller Auditorium</a>
+                            <span>Kalamazoo, MI, United States</span> October 11,2015</li>
+                        </ul>
+                        <h3>Featured video</h3>
+                        <img src="./images/audiotheme-overview-video-thumbnail.jpg" alt="audiotheme">
+                        <p>Overview showcasing a few of the features avaibles un the <span>AudioTheme Framework</span> via the WordPress admin.</p>
+                    </aside>
+                </div>
+            </div>
+                <div class="col-xs-12 col-sm-12 col-md-2">
                 <aside>
                     <ul>
                         <li>credits</li>
@@ -102,7 +104,7 @@
                     </ul>
                     <input type="text" name="" value="Search...">
                     <h3>recent release</h3>
-                    <img src="./images/wide-listener-1024x1024.jpg" alt="Radar">
+                    <img src="./images/wide-listener-1024x1024.jpg" alt="Radar" id="radar">
                     <p><span>Released 9.10.13</span><br>
                     Liste Now</p>
                     <h3>special thanks</h3>
