c'était fini avant le passage de gaetan

--- a/index.html
+++ b/index.html
@@ -25,46 +25,49 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="container-fluid">
     <header>
         <h1>Progeny MMXIV</h1>
-        <ul>
-            <li>home</li>
-            <li>about</li>
-            <li>music</li>
-            <li>gigs</li>
-            <li>photos</li>
-            <li>videos</li>
-            <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-            <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-        </ul>
+        <nav class="navbar navbar-inverse">
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">music</a></li>
+                <li><a href="#">gigs</a></li>
+                <li><a href="#">photos</a></li>
+                <li><a href="#">videos</a></li>
+                <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+            </ul>
+        </nav>
+        </div>
     </header>
-    <div class="container-fluid">
         <div class="row">
             <div class="col-md-push-2 col-xs-12 col-md-10">
                 <section>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-4">
+                    <!-- <div class="row">
+                        <div class="col-xs-12 col-sm-6 col-md-4"> -->
                             <article class="">
                                 <img src="./images/nowell-featured-image-1038x576.jpg" alt="Image1">
                                     <h2>Blog</h2>
                                     <h3>Nowell wordpress audiotheme featres overview</h3>
                             </article>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4">
+                        <!-- </div> -->
+                        <!-- <div class="col-xs-12 col-sm-6 col-md-4"> -->
                             <article class="">
                                 <img src="./images/rodney-hayden-atascosa-sand2.jpg" alt="Image2">
                                 <h2>Records</h2>
                                 <h3>atascosa sand</h3>
                             </article>
-                        </div>
-                        <div class="col-xs-12 col-sm-6 col-md-4">
+                        <!-- </div> -->
+                        <!-- <div class="col-xs-12 col-sm-6 col-md-4"> -->
                             <article class="">
                                 <img src="./images/322267385_640.jpg" alt="Image3">
                                 <h2>video</h2>
                                 <h3>drew kennedy - angel band</h3>
                             </article>
-                        </div>
-                    </div>
+                        <!-- </div>
+                    </div> -->
                 </section>
                     <div class="row" id="white">
                         <div class="col-xs-12 col-sm-8 col-md-6">
