--- a/index.html
+++ b/index.html
@@ -26,22 +26,24 @@
 </head>
 <body>
     <div class="container-fluid">
-    <header>
-        <h1>Progeny MMXIV</h1>
-        <nav class="navbar navbar-inverse">
-            <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">about</a></li>
-                <li><a href="#">music</a></li>
-                <li><a href="#">gigs</a></li>
-                <li><a href="#">photos</a></li>
-                <li><a href="#">videos</a></li>
-                <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
-                <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
-            </ul>
-        </nav>
-        </div>
-    </header>
+        <header>
+            <h1>Progeny MMXIV</h1>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+             <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="navbar">
+                    <li><a class="selected" href="#">home</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">music</a></li>
+                    <li><a href="#">gigs</a></li>
+                    <li><a href="#">photos</a></li>
+                    <li><a href="#">videos</a></li>
+                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
+        </header>
         <div class="row">
             <div class="col-md-push-2 col-xs-12 col-md-10">
                 <section>
@@ -94,6 +96,7 @@
                 </div>
             <div class="col-md-pull-10 col-xs-12 col-md-2">
                 <aside>
+                    <p>Twenty Fourteen Child Theme</p>
                     <ul>
                         <li>credits</li>
                         <li>blog/news</li>
