Le site le plus sémantique du monde

--- a/index.html
+++ b/index.html
@@ -27,22 +27,27 @@
 <body>
     <div class="container-fluid">
         <header>
+            <section id="title">
             <h1>Progeny MMXIV</h1>
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-             <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="navbar">
-                    <li><a class="selected" href="#">home</a></li>
-                    <li><a href="#">about</a></li>
-                    <li><a href="#">music</a></li>
-                    <li><a href="#">gigs</a></li>
-                    <li><a href="#">photos</a></li>
-                    <li><a href="#">videos</a></li>
-                    <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                </ul>
-            </div>
+        </section>
+            <section id="nav">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                 <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="navbar">
+                        <li><a class="selected" href="#">home</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">music</a></li>
+                        <li><a href="#">gigs</a></li>
+                        <li><a href="#">photos</a></li>
+                        <li><a href="#">videos</a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+                <a href="#" id="loupe"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+            </section>
         </header>
         <div class="row">
             <div class="col-md-push-2 col-xs-12 col-md-10">
