--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <body>
     <div class="container-fluid">
         <header>
-            <section id="title">
+            <!-- <section id="title"> -->
             <h1>Progeny MMXIV</h1>
-        </section>
+            <!-- </section> -->
             <section id="nav">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                  <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
